static/css/style.css
/* Global */
*{
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

/* Header */
header{
  position: absolute;
  overflow: hidden;
  background-color: #FFFFFF;
  padding: 10px 10px;
  width: 100%;
}
/* Shadow */
#shadow{
  -moz-box-shadow: 0px 0px 11px rgba(0,0,0,1);
  -webkit-box-shadow: 0px 0px 11px rgba(0,0,0,1);
  box-shadow: 0px 0px 11px rgba(0,0,0,1);
  z-index: 999;
  position: fixed;
}
#shadow h1{
  font-family: 'Questrial', sans-serif;
  font-size: 2em;
  text-align: center;
  letter-spacing: 1px;
  padding: 10px;
  padding-top: 2%;
}
header span{
  font-weight: 300;
  color: #46C7C7
}

/* Logo */
#shadow img{
  float: left;
  width: 15%;
  height: 10%;
}

/*Google Map */
.divtext{
  top: 100px;
  bottom: 100px;
}
#map{
  top: 100px;
  margin-bottom: 5%;
  float: right;
  width: 75%;
  height: 75%;
  background-color: #CCC;
  border: 4px solid #DDD;
  box-shadow: 0 0 5px #333;
  position: relative;
}

/* Text Info */
#info-text {
    padding-top: 7px;
    text-align: center;
    vertical-align: middle;
}

#text-wrap{
  position: relative;
  text-align: center;
  float: left;
  padding: 5px;
  background: white;
  border: 1px double #DDD;
  border-radius: 5px;
  box-shadow: 0 0 5px #333;
  color: #666;
  outline: none;
  height:100%;
  width: 225px;
  margin-bottom: 15px;
}
#text-wrap h2{
  font-family: 'Questrial', sans-serif;
  font-weight: 900;
  font-size: 1.5em;
  padding-bottom: 8%;
}
#text-wrap p{
  font-family: 'Questrial', sans-serif;
  font-size: 0.80em;
  padding-bottom: 4%;
}
#text-wrap p .instruction{
  margin: 5px;
}
#text-wrap p .mapLoc{
  font-weight: bold;
}

/* Text Field Styling */
.textbox{
  font-size: 10px;
  padding: 5px;
  background: white;
  border: 1px double #DDD;
  border-radius: 5px;
  box-shadow: 0 0 5px #333;
  color: #666;
  outline: none;
  height:25px;
  width: 175px;
}
.button{
  align-items: center;
  padding: 5px;
  background: #BCC6CC;
  border: 1px double #DDD;
  border-radius: 5px;
  box-shadow: 0 0 5px #333;
  color: #666;
  outline: none;
  height:25px;
  width: 75px;
  margin-top: 10%;
  margin-bottom: 10%;
}
.button:hover{
  cursor: pointer;
}
/* Loading Icon */
.spinner{
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  margin-left: -50px; /* half width of the spinner gif */
  margin-top: -50px; /* half height of the spinner gif */
  text-align:center;
  z-index:1234;
  overflow: auto;
  width: 50; /* width of the spinner gif */
  height: 52px; /*hight of the spinner gif +2px to fix IE8 issue */
}
.spinner img{

}

/* Error Message */
#error p{
  display: none;
  background-color: #ff0000;
}

/* Location Information */
#info{
  display: none;
  background-color: #DCF7F7;
}

/* Footer */
footer{
  background: #FFFFFF;
  width: 100%;
  overflow: hidden;
  height: auto;
}
footer p{
  color: black;
  font-size: 10px;
}
section{
  float: left;
  margin-top: 0.5%;
  margin-left: 1%;
  margin-bottom: 0.2%;
  opacity: 0.5;
}

/* Site Wrapper - Everything that isn't navigation */
.site-wrap {
  /* Critical position and size styles */
  height: 100%;
  width: 100%;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;

  /* non-critical apperance styles */
  padding-top: 2em;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 0;
  background-image: linear-gradient(135deg, rgb(254,255,255) 0%,rgb(229,255,255) 35%,rgb(203,255,255) 75%, rgb(178,255,255) 100%);
}

/* Micro reset */
*:before,*:after{
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  margin:0;
  padding:0;
}
html, body{
  height: 100%;
  width: 100%;
}

/* Spacing between header and body */
.space{
  margin-top: 10px;
}


/* Media Queries */
@media only screen and (max-width: 1245px){

/*Google Map */
.divmap{
  top: 100px;
  bottom: 100px;
}
#map{
  float: right;
  width: 50%;
  margin: 0 auto;
  width: 70%;
  height: 70%;
  position: relative;
  margin-bottom: 15px;
}

/* Text Field */
.textarea{
  top: 100px;
}
#text-wrap{
  position: relative;
  text-align: center;
  float: left;
  padding: 5px;
  outline: none;
  height:100%;
  width: 225px;
}
#text-wrap h2{
  font-size: 25px;
}
#text-wrap p{
  font-size: 15px;
}

@media only screen and (max-width: 1000px){

  /*Google Map */
  .divmap{
    top: 100px;
    bottom: 100px;
  }
  #map{
    float: right;
    width: 50%;
    margin: 0 auto;
    width: 70%;
    height: 70%;
    position: relative;
    margin-bottom: 15px;
  }

  /* Text Field */
  .textarea{
    top: 100px;
  }
  #text-wrap{
    position: relative;
    text-align: center;
    float: left;
    padding: 5px;
    outline: none;
    height:100%;
    width: 200px;
  }
  #text-wrap h2{
    font-size: 20px;
  }
  #text-wrap p{
    font-size: 15px;
  }
}
@media only screen and (max-width: 860px){

  /*Google Map */
  .divmap{
    top: 100px;
    bottom: 100px;
  }
  #map{
    float: right;
    width: 50%;
    margin: 0 auto;
    width: 68%;
    height: 68%;
    position: relative;
    margin-bottom: 15px;
  }

  /* Text Field */
  .textarea{
    top: 100px;
  }
  #text-wrap{
    position: relative;
    text-align: center;
    float: left;
    padding: 5px;
    outline: none;
    height:100%;
    width: 175px;
  }
  #text-wrap h2{
    font-size: 20px;
  }
  #text-wrap p{
    font-size: 15px;
  }
  #shadow h1{
    font-size: 25px;
  }
  #shadow img{
    float: left;
    width: 15%;
    height: 15%;
  }

  /* Text Field Styling */
  .textbox{
    padding: 5px;
    height:25px;
    width: 150px;
  }
  .button{
    padding: 5px;
    background: #BCC6CC;
    height:25px;
    width: 50px;
  }
}
@media only screen and (max-width: 735px){

  /*Google Map */
  .divmap{
    top: 100px;
    bottom: 100px;
  }
  #map{
    float: right;
    width: 50%;
    margin: 0 auto;
    width: 65%;
    height: 65%;
    position: relative;
    margin-bottom: 15px;
  }

  /* Text Field */
  .textarea{
    top: 100px;
  }
  #text-wrap{
    position: relative;
    text-align: center;
    float: left;
    padding: 5px;
    outline: none;
    height:100%;
    width: 175px;
  }
  #text-wrap h2{
    font-size: 20px;
  }
  #text-wrap p{
    font-size: 15px;
  }
  #shadow h1{
    font-size: 20px;
  }
  #shadow img{
    float: left;
    width: 15%;
    height: 15%;
  }

  /* Header */
  header{
    position: absolute;
    overflow: hidden;
    background-color: #FFFFFF;
    padding: 15px 15px;
    width: 100%;
  }

  /* Text Field Styling */
  .textbox{
    padding: 5px;
    height:25px;
    width: 150px;
  }
  .button{
    padding: 5px;
    background: #BCC6CC;
    height:25px;
    width: 50px;
  }
}
@media only screen and (max-width: 670px){

  /*Google Map */
  .divmap{
    top: 100px;
    bottom: 100px;
  }
  #map{
    width: 50%;
    margin: 0 auto;
    width: 100%;
    height: 400px;
    position: relative;
    margin-bottom: 15px;
  }

  /* Text Field */
  .textarea{
    top: 100px;
  }
  #text-wrap{
    position: relative;
    text-align: center;
    float: left;
    padding: 5px;
    outline: none;
    height:80%;
    width: 100%;
  }
  #text-wrap h2{
    font-size: 20px;
  }
  #text-wrap p{
    font-size: 15px;
  }
  #shadow h1{
    font-size: 15px;
  }
  #shadow img{
    float: left;
    width: 15%;
    height: 15%;
  }

  /* Header */
  header{
    position: absolute;
    overflow: hidden;
    background-color: #FFFFFF;
    padding: 15px 15px;
    width: 100%;
  }

  /* Text Field Styling */
  .textbox{
    padding: 5px;
    height:25px;
    width: 150px;
  }
  .button{
    padding: 5px;
    background: #BCC6CC;
    height:25px;
    width: 50px;
    margin-bottom: 2%;
    margin-top: 2%;
  }
}
@media only screen and (max-width: 520px){

  /*Google Map */
  .divmap{
    top: 100px;
    bottom: 100px;
  }
  #map{
    width: 50%;
    margin: 0 auto;
    width: 100%;
    height: 300px;
    position: relative;
    margin-bottom: 15px;
  }

  /* Text Field */
  .textarea{
    top: 100px;
  }
  #text-wrap{
    position: relative;
    text-align: center;
    float: left;
    padding: 5px;
    outline: none;
    height:70%;
    width: 100%;
  }
  #text-wrap h2{
    font-size: 15px;
  }
  #text-wrap p{
    font-size: 10px;
  }
  #shadow h1{
    font-size: 10px;
  }
  #shadow img{
    float: left;
    width: 15%;
    height: 15%;
  }

  /* Header */
  header{
    position: absolute;
    overflow: hidden;
    background-color: #FFFFFF;
    padding: 15px 15px;
    width: 100%;
  }

  /* Text Field Styling */
  .textbox{
    padding: 5px;
    height:20px;
    width: 100px;
  }
  .button{
    padding: 5px;
    background: #BCC6CC;
    height:20px;
    width: 50px;
  }

  /* Header */
  #shadow h3{
    font-family: 'Questrial', sans-serif;
    font-size: 0.8em;
    text-align: center;
    letter-spacing: 1px;
    padding: 10px;
  }
}

